Начало реализации fragment_filter

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ room = "2.6.1"
 ksp = "1.9.21-1.0.15"
 gson = "2.10.1"
 exoplayer = "2.19.1"
+powerspinner = "1.2.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,6 +43,7 @@ room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 room-ksp = { module = "androidx.room:room-compiler", version.ref = "room" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 exoplayer = { module = "com.google.android.exoplayer:exoplayer", version.ref = "exoplayer" }
+powerspinner = { group = "com.github.skydoves", name = "powerspinner", version.ref = "powerspinner" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
